@@ -1,2 +1,3 @@
 id,name,cost mult,build time,income,upkeep,downgrade,upgrade,tags,data,image,plugin,desc,order
 SRD_sylpheed_station_tech_mining,AI Network Analysis,60,45,,4,,,techmining,,graphics/icons/industry/techmining.png,data.scripts.economy.industries.SRD_SylpheedStationTechMining,"By utilizing the massive AI networks throughout Sylpheed Station, ancient data and blueprints can be extracted from an old AI network on Preatorium.",401
+SRD_sylpheed_station_hydroponics,Hydroponics Facility,45,45,,3,,,farming,,graphics/icons/industry/aquaculture.png,data.scripts.economy.industries.SRD_SylpheedStationHydroponics,"While hydroponics-based farming on stations is more maintenance-heavy and less productive than normal surface farming, it can still be an efficient method of food production when adequate farmland is unavailable.",210
