@@ -1,6 +1,10 @@
 ﻿0.9.2a
+Additions:
+- Added a new Hydroponics industry exclusive to Sylpheed Station, which replaces its old Farming industry
+
 Changes:
 - Catharsis is now a drone fighter
+- Sylphon markets now generally have AI cores on their industries; bigger markets have more cores
 
 Balancing:
 - The Nanobot Beam now deals its extra damage in smaller amounts at a time (same overall DPS)
